Modified layout issues with skills triangle

--- a/style.css
+++ b/style.css
@@ -776,7 +776,7 @@ p.lead{
 .triangles {
     margin-bottom: 40px;
 	margin-left:5%;
-	margin-right:5%
+	margin-right:5%;
 }
 .triangles .icon{
     font-size: 22pt;
